# microbial-ecology-sim

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  example_config.toml
.kiro/specs/actor-brain-component/: design.md  requirements.md  tasks.md
.kiro/specs/actor-energy-cap/: design.md  requirements.md  tasks.md
.kiro/specs/actor-energy-costs/: design.md  requirements.md  tasks.md
.kiro/specs/actor-reproduction/: design.md  requirements.md  tasks.md
.kiro/specs/bevy-grid-visualization/: design.md  requirements.md  tasks.md
.kiro/specs/chemical-field-balancing/: design.md  requirements.md  tasks.md
.kiro/specs/config-analyzer/: design.md  requirements.md  tasks.md
.kiro/specs/config-info-panel/: design.md  requirements.md  tasks.md
.kiro/specs/consumption-threshold/: design.md  requirements.md
.kiro/steering/: config-documentation.md  emergent-sovereignty.md  rust-best-practices.md  rust-systems-engineer-persona.md
configs/: README.md  archipelago.toml  cognitive-pressure.toml  dense-petri-dish.toml  feast-and-famine.toml  sparse-savanna.toml  thermal-crucible.toml
src/: lib.rs  main.rs
src/grid/: actor.rs  actor_config.rs  actor_systems.rs  brain.rs  config.rs  decay.rs  diffusion.rs  error.rs  evaporation.rs  field_buffer.rs  heat.rs  mod.rs  partition.rs  source.rs  tick.rs  world_init.rs
src/io/: analysis.rs  cli.rs  config_error.rs  config_file.rs  mod.rs  snapshot.rs
src/viz/: color.rs  glyph.rs  input.rs  mod.rs  renderer.rs  stats.rs
src/viz_bevy/: color.rs  editor.rs  mod.rs  normalize.rs  resources.rs  setup.rs  systems.rs
(+93 files in other folders)
