[package]
name = "emergent-sovereignty"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bevy_viz"
path = "src/bin/bevy_viz.rs"

[dependencies]
anyhow = "1"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.10"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "bevy_text",
    "bevy_winit",
    "bevy_image",
    "bevy_window",
    "bevy_color",
    "bevy_state",
    "bevy_log",
    "std",
    "multi_threaded",
    "x11",
    "png",
    "default_font",
]

[dev-dependencies]
proptest = "1.6"
