[package]
name = "emergent-sovereignty"
version = "0.1.0"
edition = "2024"
default-run = "emergent-sovereignty"

[dependencies]
anyhow = "1"
rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
smallvec = "1"
thiserror = "2"
toml = "0.8"

[dependencies.bevy]
version = "0.16"
default-features = false
features = [
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_ui",
    "bevy_text",
    "bevy_winit",
    "bevy_image",
    "bevy_window",
    "bevy_color",
    "bevy_state",
    "bevy_log",
    "std",
    "multi_threaded",
    "x11",
    "png",
    "default_font",
]

[[bin]]
name = "config-analyzer"
path = "src/bin/config_analyzer.rs"

[dev-dependencies]
proptest = "1.6"
